--- a/intern/cycles/kernel/osl/SConscript
+++ b/intern/cycles/kernel/osl/SConscript
@@ -59,6 +59,10 @@ else:
 if env['WITH_BF_CYCLES_DEBUG']:
     defs.append('WITH_CYCLES_DEBUG')
 
+if env['WITH_BF_OPENVDB']:
+    defs.append('WITH_OPENVDB')
+    incs.append(env['BF_OPENVDB_INC'])
+
 if env['WITH_BF_CYCLES_LOGGING']:
     defs.append('WITH_CYCLES_LOGGING')
     defs.append('GOOGLE_GLOG_DLL_DECL=')
@@ -75,6 +79,6 @@ if env['OURPLATFORM'] in ('win32-vc', 'win64-vc'):
     incs.append(env['BF_PTHREADS_INC'])
     defs.append('OSL_STATIC_LIBRARY')
 else:
-    cxxflags.append('-fno-rtti -DBOOST_NO_RTTI -DBOOST_NO_TYPEID -ffast-math'.split())
+    cxxflags.append('-DTBB_USE_EXCEPTIONS=0 -DTBB_USE_PERFORMANCE_WARNINGS=0 -fno-rtti -DBOOST_NO_RTTI -DBOOST_NO_TYPEID -ffast-math'.split())
 
 env.BlenderLib ('cycles_kernel_osl', sources, incs, defs, libtype=['intern'], priority=[10], cxx_compileflags=cxxflags)
